my landing-page

--- a/index.html
+++ b/index.html
@@ -16,27 +16,26 @@
         </div>
         <div class="links">
             <div class="link-1">
-                About us
+                <a href="https://www.w3schools.com/html/html_entities.asp">Help</a>
             </div>
             <div class="link-2">
-                chat with us
+                <a href="https://www.w3schools.com/css/default.asp">learn CSS</a>
             </div>
             <div class="link-3">
-                home
+                <a href="https://www.w3docs.com/course">Courses</a>
             </div>
         </div>
     </div>
     <div class="main">
         <div class="text-side">
             <di>
-                <h2>This website is awesome</h2>
+                <h2>DREAMS TURN TO REALITY</h2>
             </di>
             <div class="subtext">
-                <p>this website has some subtext that goes here under the main title.it's a small font and 
-                    the color is lower contrast </p>
+                <p>learn more about HTML , CSS ,JAVASCRIPT and other programming languages to be a webdeveloper you've always dreamt of &#37</p>
             </div>
             <div class="button-div">
-                <button class="button">Sign up</button>
+                <button class="button"><a href="https://www.w3schools.com/howto/default.asp">Get started</a></button>
             </div>
         </div>
         <div class="why-code-image">
@@ -44,37 +43,53 @@
         </div>
     </div>
     <div class="heading-2">
-        <h3>some random information</h3>
+        <h3>Invest your time &#37 pave your way to success &#36</h3>
     </div>
     <div class="nav">
         <div class="align-images">
             <div>
                 <img src="img/head-logo.jpg" alt="" class="image-3">
-                <p>code as u dream of it</p>
+                <div><a href="https://www.w3schools.com/" class="set-1">Dream here</a></div>
+
             </div>
             <div>
                 <img src="img/pexels-aleksandar-pasaric-2603464.jpg" alt="" class="image-4">
-                <p>more information</p>
+                <div><a href="https://www.w3schools.com/html/" class="set-2">HTML</a></div>
             </div>
             <div>
                 <img src="img/pexels-christina-morillo-1181673.jpg" alt="" class="image-5">
-                <p>access this </p>
+                <div><a href="https://www.w3schools.com/js/default.asp" class="set-3">java script </a></div>
             </div>
             <div>
                 <img src="img/why-code.jpg" alt="" class="image-6">
-                <p>here it is</p>
+                <div><a href="https://www.w3schools.com/js/default.asp" class="set-4">exercises</a></div>
             </div>
         </div>
     </div>
 
     <div class="para">
         <p class="quote">
-            This is an inspiring qoute, or a testimonial from a customer. Maybe it's just filling up space,
-            or maybe people will actually read it. Who knows? All i know is that it looks nice.
+             Hero!Web is optimized for learning and training. Examples might be simplified to improve reading and learning. Tutorials, references, and examples are constantly reviewed to avoid errors, but we cannot warrant full correctness of all content. While using Hero!Web, 
+            you agree to have read and accepted our terms of use, cookie and privacy policy.
         </p>
         <h3 class="author">
-            THOR, god of thunder
+            MUCYO Blaise, webdeveloper
         </h3>
+    </div>
+    <div class="nav-2">
+        <div class="nav-2-2">
+            <div class="text-side-2">
+                <h3>you agree to our terms and policy &#63</h3>
+                <p>Sign up to get started and make your dreams of becoming awebdeveloper come true </p>
+            </div> 
+            <div  class="button-2">
+                <button class="sign-up"><a href="https://www.w3schools.com/signup/index.php">Sign up</a></button>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>Copyright &#169 the odin project 2021</p>
     </div>
 </body>
 </html>
